--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,17 @@
 body {
-  background: #f1f2f2;
+  background-image: url("../images/background2-01.png");
+  background-size: cover;
+}
+h1 {
+  font-family: "Poppins", sans-serif;
+  color: #dfa73e;
+  font-weight: 700;
+  font-size: 50px;
+  position: absolute;
+  transform: rotate(90deg);
+  top: 250px;
+  left: 700px;
+  right: -60px;
 }
 
 .container {
@@ -165,6 +177,7 @@ h3 {
   font-family: "Poppins", sans-serif;
   color: #dfa73e;
   text-align: center;
+  margin-bottom: 30px;
 }
 .coder-link:hover {
   cursor: pointer;
