--- a/src/style.css
+++ b/src/style.css
@@ -96,7 +96,17 @@ h3 {
   margin-top: -4px;
   margin-left: 15px;
 }
-.details {
+.details-humid {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  text-align: center;
+  color: #6d6e6f;
+  margin-top: -3px;
+  margin-left: 15px;
+}
+
+.details-wind {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-size: 18px;
