Updated background image

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../images/background4-01.png");
+  background-image: url("../images/background3.png");
   background-size: cover;
 }
 
